A TLS mysql server example
Signed-off-by: Max Allan <max.allan@chainguard.dev>